Avant transactions, sauvegarde avant try/catch => service